--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "hexo clean && hexo g -d",
+    "deploy": "hexo clean && hexo g && hexo algolia && hexo deploy",
     "server": "hexo server"
   },
   "hexo": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "hexo": "^5.0.0",
     "hexo-algoliasearch": "^1.0.0",
+    "hexo-blog-encrypt": "^3.1.6",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
