--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -162,7 +162,7 @@ auto_thumbnail_image: true
 # and use relative url : `your-image.png`
 cover_image: http://cdn.ekko306.top/%E7%81%BF%E7%83%82%E5%8D%83%E9%98%B3%20-%20Single.jpg
 # Your favicon located in folder `source/_images/` (development) or in `source/assets/images/` (production)
-favicon:
+favicon: http://cdn.ekko306.top/daitu.png
 # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
 image_gallery: true
 # Pagination behavior of archive, category and tag pages (false: pagination disabled, true: pagination enabled)
