--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "jsdom": "^19.0.0"
   }
 }
